Fixed some error in order update and change label names in inventory

--- a/src/teaeli/UpdateBlendStock.form
+++ b/src/teaeli/UpdateBlendStock.form
@@ -71,11 +71,11 @@
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="updateStockItemCategoryName" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="updateStockItemCategoryName" alignment="1" max="32767" attributes="0"/>
                               <Component id="updateStockItemName" alignment="1" min="-2" pref="80" max="-2" attributes="0"/>
                               <Component id="updateStockQtyInStockLbl" alignment="1" min="-2" pref="89" max="-2" attributes="0"/>
-                              <Component id="updateStockChangeName" alignment="1" min="-2" pref="80" max="-2" attributes="0"/>
+                              <Component id="updateStockChangeName" alignment="1" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -268,7 +268,7 @@
               <Font name="Segoe UI" size="14" style="0"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="4"/>
-            <Property name="text" type="java.lang.String" value="New Qty"/>
+            <Property name="text" type="java.lang.String" value="Changing Qty"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="updateStockItemCategoryName">
